# Minastar

./: .gitignore  CMakeLists.txt
cmake/: FindIrrKlang.cmake  FindMINGW32.cmake  FindOpenGL.cmake  FindSDL2.cmake
fonts/: main.fnt  main.txt
shaders/: basic_frag.glsl  basic_vertex.glsl  text_frag.glsl  text_vert.glsl
src/: asteroid.cpp  asteroid.h  bar_renderer.cpp  bar_renderer.h  bullet.cpp  bullet.h  campaign.cpp  campaign.h  collision_handler.cpp  collision_handler.h  filer_handler.h  game_entity.cpp  game_entity.h  main.cpp  mineral.cpp  mineral.h  player_controller.cpp  player_controller.h  shader_program.cpp  ship.cpp  ship.h  ship_controller.cpp  ship_controller.h  sinibomb.cpp  sinibomb.h  sinistar.cpp  sinistar.h  soldier_controller.cpp  soldier_controller.h  stb_image.h  text_renderer.cpp  text_renderer.h  texture.cpp  window.cpp  window.h  worker_controller.cpp  worker_controller.h  world.cpp  world.h
src/GUI/: bar_renderer.h  game_screen.cpp  game_screen.h  intro_screen.cpp  intro_screen.h  lose_screen.cpp  lose_screen.h  screen.cpp  screen.h  screen_manager.cpp  screen_manager.h  start_screen.cpp  start_screen.h  text_renderer.cpp  text_renderer.h  victory_screen.cpp  victory_screen.h
src/controllers/: player_controller.cpp  player_controller.h  scavenger_controller.cpp  scavenger_controller.h  ship_controller.cpp  ship_controller.h  soldier_controller.cpp  soldier_controller.h  worker_controller.cpp  worker_controller.h
src/engine/: audio_player.cpp  audio_player.h  file_handler.cpp  file_handler.h  filer_handler.cpp  font.cpp  font.h  input.cpp  input.h  math_utils.cpp  math_utils.h  shader_program.cpp  shader_program.h  stb_image.h  texture.h  window.cpp  window.h
src/entities/: asteroid.cpp  asteroid.h  bullet.cpp  bullet.h  debris.cpp  debris.h  game_entity.cpp  game_entity.h  mineral.cpp  mineral.h  ship.cpp  ship.h  sinibomb.cpp  sinistar.cpp  sinistar.h
